<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">养娃宝</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="knowledge_text">知识</string>
    <string name="collection_text">收藏</string>
    <string name="settingup_text">设置</string>
    <string name="title_activity_login">养娃宝</string>
    <string name="textview_UserName">用户名</string>
    <string name="textview_Password">密    码</string>
    <string name="register_ButtonText">注册</string>
    <string name="login_ButtonText">登陆</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_welcome">养娃宝</string>
    <string name="welcome_activity_text">请输入您家宝贝的出生日期：yyyymmdd</string>
    <string name="welcome_activity_button_text">立即体验</string>
    <string name="title_activity_show_knowledge">ShowKnowledge</string>
    <string name="knowledge_activity_detailknowledge">详细知识</string>
    <string name="knowledge_activity_collect_button_text">收藏</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="title_activity_collect">CollectActivity</string>
    <string name="register_activity_title">注册</string>
    <string name="login_activity_title">登陆</string>
    <string name="setup_activity_title">设置</string>
    <string name="register_textviewUserName">用户名</string>
    <string name="register_textviewPassword">密码</string>
    <string name="register_textviewConfirmPassword">确认密码</string>
    <string name="register_finish">完成</string>
    <string name="register_nextstep">下一步</string>
    <string name="title_activity_register_with_baby_infor">RegisterWithBabyInforActivity</string>
    <string name="collect_knowledge_text">我的收藏</string>
    <string name="title_activity_collect_detail_knowledge">CollectDetailKnowledgeActivity</string>
    <string name="collect_detail_activity_knowledge">详细知识</string>
    <string name="childbirthday">出生日期</string>
    <string name="childsex">性别</string>
    <string name="childweight">体重</string>
    <string name="childheight">身高</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="weightunit">千克</string>
    <string name="heightunit">cm</string>
    <string name="childname">姓名</string>
    <string name="birthyear">年</string>
    <string name="birthmonth">月</string>
    <string name="birthday">日</string>
    <string name="finish">完成</string>
    <string name="school_address">学校地址</string>
    <string name="family_address">家庭住址</string>
</resources>
